--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,16 @@
 .header {
-  display: flex;
-  justify-content: space-between;
   background: #1e1e1e;
   padding: 20px;
+}
+
+.header_container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav_menu {
   display: flex;
   align-items: center;
-  margin-left: 100px;
 }
 
 .nav_item {
