--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,9 @@
 .header {
   background: #1e1e1e;
   padding: 20px;
+  position: fixed;
+  width: 100%;
+  z-index: 5;
 }
 
 .header_container {
@@ -19,11 +22,33 @@
   align-items: center;
   font-weight: 400;
   color: #c4c2c2;
+  transition: all 300ms ease-out;
+}
+
+.nav_item:first-child {
+  margin-left: 0;
+}
+
+.nav_item:hover {
+  cursor: pointer;
+  color: #fe5b46;
+}
+
+.active {
+  border-bottom: 1px solid #fe5b46;
+  padding-bottom: 3px;
+  color: #fe5b46;
 }
 
 .menu_cv {
   border: 1px solid #fe5b46;
-  padding: 15px 20px;
+  padding: 10px 20px;
   background: #fe5b46;
   border-radius: 5px;
+  transition: all 300ms ease-in-out;
+}
+
+.menu_cv:hover {
+  background: none;
+  cursor: pointer;
 }
