--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -6,3 +6,47 @@
 .wave img {
   position: absolute;
 }
+
+.services_title {
+  font-size: 30px;
+  font-family: 'Roboto';
+  font-weight: 400;
+  color: #fff;
+  margin-top: 50px;
+  padding: 0 20px;
+}
+
+.services_main {
+  display: flex;
+  margin: 20px auto;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+  height: 350px;
+  background: #1e1e1e;
+  margin: 20px;
+  border-radius: 15px;
+}
+
+.card_logo img {
+  width: 100px;
+}
+
+.card_title {
+  color: #fe5b46;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.card.web_development {
+  background: #fe5b46;
+}
+
+.web_development .card_title {
+  color: #fff;
+}
