--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -56,3 +56,48 @@
   box-shadow: -1px 0px 8px 1px rgba(0, 0, 0, 0.54);
   border-radius: 15px;
 }
+
+.input {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  color: #fe5b46;
+}
+
+.input:focus-visible,
+.inputMessage:focus-visible {
+  outline: none;
+}
+
+.input::placeholder {
+  color: #fe5b46;
+}
+
+.inputMessage {
+  width: 100%;
+  height: 200px;
+  padding: 10px 20px;
+  border-radius: 15px;
+  color: #fe5b46;
+}
+
+.inputMessage::placeholder {
+  color: #fe5b46;
+}
+
+.submit_btn {
+  background: transparent;
+  margin-top: 15px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  padding: 10px 25px;
+  color: #fff;
+  transition: opacity 300ms ease-out;
+}
+
+.submit_btn:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
