--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 * {
   box-sizing: border-box;
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-weight: 500;
   color: #fff;
 }
@@ -27,6 +27,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 20%;
 }
 
 .services_section {
