--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -61,9 +61,10 @@
   width: 100%;
   margin: 10px 0;
   padding: 10px 20px;
+  background: #fe5b46;
   border-radius: 10px;
-  border: none;
-  color: #fe5b46;
+  border: 1px solid #fff;
+  color: #fff;
 }
 
 .input:focus-visible,
@@ -72,29 +73,30 @@
 }
 
 .input::placeholder {
-  color: #fe5b46;
+  color: #fff;
 }
 
 .inputMessage {
   width: 100%;
   height: 200px;
   padding: 10px 20px;
-  border: none;
+  border: 1px solid #fff;
   border-radius: 15px;
-  color: #fe5b46;
+  background: #fe5b46;
+  color: #fff;
 }
 
 .inputMessage::placeholder {
-  color: #fe5b46;
+  color: #fff;
 }
 
 .submit_btn {
-  background: transparent;
+  background: #fff;
   margin-top: 15px;
   border: 1px solid #fff;
   border-radius: 10px;
   padding: 10px 25px;
-  color: #fff;
+  color: #fe5b46;
   transition: opacity 300ms ease-out;
 }
 
