--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -67,3 +67,9 @@
   cursor: pointer;
   opacity: 0.3;
 }
+
+@media only screen and (max-width: 815px) {
+  .main_description p {
+    font-size: 45px;
+  }
+}
